# learn_C

./: CMakeLists.txt  README.md
lesson_10_for_Begin_End/: exercise_1.c
lesson_11_for_Begin_End/: exercise_1.c  exercise_2.c
lesson_11_for_Begin_End/HW/: exercise_1.c  exercise_3.c
lesson_12_for_Begin_End/: exercise_1.c  exercise_2.c
lesson_12_for_Begin_End/HW/: exercise_1.c  exercise_2.c
lesson_13_for_Begin_End/: exercise_1.c
lesson_13_for_Begin_End/HW/: exercise_1.c  exercise_2.c
lesson_14_for_Begin_End/: exercise_1.c
lesson_1_for_Begin_End/: exersice_1.c
lesson_1_for_Gosha_Dudar/: exercise_1.c  exercise_1.h  exersice_2.c  exersice_2.h  exersice_3.c  exersice_3.h  exersice_4.c  exersice_4.h
lesson_2_for_Begin_End/: exersice_1.c
lesson_2_for_Begin_End/HW_1/: exersice_1.c  exersice_2.c
lesson_2_for_Gosha_Dudar/: exersice_1.c
lesson_3_for_Begin_End/: exersice_1.c  exersice_2.c  exersice_3.c
lesson_3_for_Gosha_Dudar/: exercise_1.c  exercise_2.c
lesson_4_for_Begin_End/: exersice_1.c
lesson_4_for_Begin_End/HW/: exersice_1.c  exersice_2.c
lesson_4_for_Gosha_Dudar/: exercise_1.c  exercise_2.c
lesson_5_for_Begin_End/: exersice_1.c
lesson_5_for_Begin_End/HW/: exersice_1.c  exersice_2.c
lesson_5_for_Gosha_Dudar/: exercise_1.c  functions.h
lesson_6_for_Begin_End/: exersice_1.c
lesson_6_for_Begin_End/HW/: exersice_1.c  exersice_2.c
lesson_6_for_Gosha_Dudar/: exercise_1.c
lesson_7_for_Begin_End/: exercise_1.c
lesson_7_for_Gosha_Dudar/: exercise_1.c  exercise_2.c
lesson_8_for_Begin_End/: exercise_1.c  exercise_2.c  exercise_3.c
lesson_8_for_Begin_End/HW/: exercise_1.c  exercise_2.c  exercise_3.c
lesson_9_for_Begin_End/: exercise_1.c
lesson_9_for_Begin_End/HW/: exercise_2.c  exersice_1.c
