cmake_minimum_required(VERSION 3.31)
project(learn_C C)

set(CMAKE_C_STANDARD 17)

add_executable(learn_C main.c
        lesson_1_for_Gosha_Dudar/exercise_1.c
        lesson_1_for_Gosha_Dudar/exercise_1.h
        lesson_1_for_Gosha_Dudar/exersice_2.c
        lesson_1_for_Gosha_Dudar/exersice_2.h
        lesson_1_for_Gosha_Dudar/exersice_3.c
        lesson_1_for_Gosha_Dudar/exersice_3.h
        lesson_1_for_Gosha_Dudar/exersice_4.c
        lesson_1_for_Gosha_Dudar/exersice_4.h
        lesson_1_for_Begin_End/exersice_1.c
        lesson_2_for_Begin_End/exersice_1.c
        lesson_2_for_Begin_End/HW_1/exersice_1.c
        lesson_2_for_Begin_End/HW_1/exersice_2.c
        lesson_2_for_Gosha_Dudar/exersice_1.c
        lesson_3_for_Begin_End/exersice_1.c
        lesson_3_for_Begin_End/exersice_2.c
        lesson_3_for_Begin_End/exersice_3.c
        lesson_4_for_Begin_End/exersice_1.c
        lesson_4_for_Begin_End/HW/exersice_1.c
        lesson_4_for_Begin_End/HW/exersice_2.c
        lesson_5_for_Begin_End/exersice_1.c
        lesson_5_for_Begin_End/HW/exersice_1.c
        lesson_5_for_Begin_End/HW/exersice_2.c
        lesson_6_for_Begin_End/exersice_1.c
        lesson_6_for_Begin_End/HW/exersice_1.c
        lesson_6_for_Begin_End/HW/exersice_2.c
        lesson_3_for_Gosha_Dudar/exercise_1.c
        lesson_3_for_Gosha_Dudar/exercise_2.c
        lesson_4_for_Gosha_Dudar/exercise_1.c
        lesson_4_for_Gosha_Dudar/exercise_2.c
        lesson_5_for_Gosha_Dudar/exercise_1.c
        lesson_5_for_Gosha_Dudar/functions.h
        lesson_7_for_Begin_End/exercise_1.c
)
